order-list/orderlist-k8s/orderlist-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderlist
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderlist
      version: 'v1'
  template:
    metadata:
      labels:
        app: orderlist
        version: 'v1'
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - orderlist
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: orderlist-app
          image: docker.io/sunnypandas/orderlist
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 10002
          readinessProbe:
            httpGet:
              path: /management/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health/liveness
              port: http
            initialDelaySeconds: 120
