order-list/orderlist-k8s/orderlist-service.yml
apiVersion: v1
kind: Service
metadata:
  name: orderlist
  namespace: default
  labels:
    app: orderlist
spec:
  selector:
    app: orderlist
  ports:
    - name: http
      port: 80
      targetPort: 10002
