order-list/orderlist-k8s/orderlist-virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: orderlist-virtualservice
  namespace: default
spec:
  hosts:
    - orderlist
  http:
    - route:
        - destination:
            host: orderlist
            subset: 'v1'
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
